Bug 1313339 - Also use modules loaded in the process to decide about DXVA blocklisting. r=gerald, a=lizzard

--HG--
extra : source : 79598bf912839f42ebf1231b5e1840bd221522ab